# cnake-game

./: CMakeLists.txt  README.md  main  main.c
include/: custom_structs.h  game_defines.h  handy_funcs.h  level_loader.h  traverse_level.h
levels/: level1.txt
lib/: backup_levelloader  level_loader  level_loader.c
src/: handy_funcs.c  level_loader.c  main.c  traverse_level.c
